# RealWorldHaskell

ch01/: WC.hs
ch02/: lastButOne.hs  myDrop.hs
ch03/: add.hs  algebraicVector.hs  bookStore.hs  braces.hs  guards.hs  lending.hs  nestedLets.hs  roygbiv.hs  tree.hs
ch03-defining-types/: exercises.hs  globalVariable.hs  listADT.hs  localFunction.hs  mySecond.hs  nullable.hs
ch04/: dlts.hs  exercises.hs  exercises2.hs  file-in.txt  file-out.txt  fixLines  fixLines.hs  map.hs  splitLines.hs  sum.hs
ch04-functional-programming/: adler32.hs  fold.hs  intParse.hs  interactWith  interactWith.hs  plus.hs  printLines  printLines.hs  suffixes.hs
ch05/: PrettyStub.hs  SimpleResult.hs
ch05-writing-a-library/: Main.hs  PrettyJSON.hs  PutJson.hs  SimpleJson.hs  mypretty.cabal  simple
ch06/: BrokenClass.hs  JSONClass.hs  Overlap.hs  colorDerived.hs  newtype.hs  newtypeDiff.hs
ch06-using-typeclasses/: JSONClass.hs  SimpleClass.hs  eqClasses.hs  monomorphism.hs  naiveEq.hs  read.hs
ch07/: actions.hs  basicIO-noDo.hs  basicIO.hs  callingPure.hs  output.txt  tempfile.hs  toupper-lazy1.hs  toupper-lazy6.hs
ch07-input-and-output/: actions.hs  actions2.hs  filter.hs  input.txt  output.txt  return1.hs  return3.hs  toupper-imp.hs  toupper-lazy2.hs  toupper-lazy3.hs  toupper-lazy5.hs
ch08/: ch08.cabal  glob.hs  globRegex.hs  highestClose.hs  sumFile.hs  useful.hs
ch08-file-processing-regex/: Main.hs  ch08.cabal  globRegex.hs
ch09/: betterPredicate.hs  recursiveContents.hs
ch09-io-case-study/: betterPredicate.hs  controlledVisit.hs  foldDir.hs  style.hs
ch10-parsing-binary-data-format/: EitherInt.hs  FunctorLaws.hs  PNM.hs  Parse.hs  TreeMap.hs
ch11-testing-quality-assurance/: Arbitrary.hs  Main.hs  Prettify2.hs  QC.cabal  QC.hs  Run.hs
ch12-barcode-recognition/: Barcode.hs  ch12.cabal
ch12-barcode-recognition/src/: Barcode.hs  Main.hs  Parse.hs
ch13-data-structures/: BuildMap.hs  DList.hs  DataSequence.hs  FuncRecs.hs  Lookup.hs  Monoid.hs  Num.hs  NumSimple.hs  PasswdAl.hs  PasswdMap.hs
ch14-monads/: Carrier.hs  CartesianProduct.hs  ListMonad.hs  Logger.hs  Main.hs  Maybe.hs  MonadJoin.hs  MonadLaws.hs  MultiplyTo.hs  Random.hs  SimpleState.hs  ch14.cabal
ch15-programming-with-monads/: AltSupply.hs  MovieReview.hs  RandomGolf.hs  RandomSupply.hs  Supply.hs  SupplyClass.hs  SupplyInstance.hs  VCard.hs  supply.cabal
