cabal-version:       >=1.10
name:                ch08
version:             0.1.0.0
author:              The Lusitanian King
build-type:          Simple

executable ch08
  main-is:             Main.hs
  other-modules:       GlobRegex,
                       Glob
  build-depends:       base >=4.13 && <4.14,
                       regex-posix >= 0.96,
                       directory >= 1.3.6,
                       filepath >= 1.4.2
  default-language:    Haskell2010
