cabal-version:       >=1.10
name:                QC
version:             0.1.0.0
license-file:        LICENSE
author:              The Lusitanian King
build-type:          Simple

executable ch11-testing-quality-assurance
  main-is:             Main.hs
  other-modules:       QC,
                       Prettify2,
                       Arbitrary,
                       Run
  build-depends:       base >= 4.13 && < 4.14,
                       QuickCheck >= 1.2.0
  default-language:    Haskell2010
