cabal-version:       >= 1.10
name:                ch12
version:             0.1.0.0
author:              The Lusitanian King
build-type:          Simple

executable ch12
  main-is:             Main.hs
  other-modules:       Barcode, Parse
  build-depends:       base >= 4.13 && < 4.14,
                       array >= 0.5.4,
                       bytestring >= 0.10.10,
                       containers >= 0.6.2
  hs-source-dirs:      src
  default-language:    Haskell2010