cabal-version:       >= 1.10
name:                ch14
version:             0.1.0.0
build-type:          Simple

executable ch14
  main-is:             Main.hs
  other-modules:       Random
  build-depends:       base >= 4.13 && < 4.14,
                       mtl >= 2.2.2,
                       random >= 1.2.0
  default-language:    Haskell2010